--- a/index.html
+++ b/index.html
@@ -65,9 +65,6 @@
           <img id="track-art" src="" alt="Album Art" width="100" height="100">
           <div id="track-title" style="font-weight:bold; font-size:1.2rem;">Loading...</div>
         </div>
-	<script src="script.js"></script>
-	<script src="musicplayer.js"></script>
-
 
         <canvas id="waveform-canvas" width="600" height="100" style="margin-top:10px; background:#111; border-radius:6px;"></canvas>
 
@@ -150,6 +147,7 @@
     </section>
 </main>
 
+<!-- SINGLE SCRIPT -->
 <script src="script.js"></script>
 </body>
 </html>
