--- a/index.html
+++ b/index.html
@@ -59,27 +59,12 @@
     <section id="page-music" class="page">
       <h2>MUSIC</h2>
 
-      <!-- MUSIC PLAYER -->
-      <div id="music-player-container">
-        <div id="current-track-info" style="display:flex; align-items:center; gap:1rem;">
-          <img id="track-art" src="" alt="Album Art" width="100" height="100">
-          <div id="track-title" style="font-weight:bold; font-size:1.2rem;">Loading...</div>
-        </div>
-
-        <canvas id="waveform-canvas" width="600" height="100" style="margin-top:10px; background:#111; border-radius:6px;"></canvas>
-
-        <div id="music-controls" style="margin-top:10px;">
-          <button id="prev-track">⏮️</button>
-          <button id="play-pause">▶️</button>
-          <button id="next-track">⏭️</button>
-        </div>
-
-        <div id="music-links" style="margin-top:15px;">
-          <a href="https://open.spotify.com/artist/7GG0psjHrLABB4yQkdnrTY" target="_blank">Spotify</a> |
-          <a href="https://soundcloud.com/crunchyverse" target="_blank">SoundCloud</a> |
-          <a href="https://music.apple.com/us/artist/kari/1780686767" target="_blank">Apple Music</a> |
-          <a href="https://www.bandlab.com/crunchyverse" target="_blank">BandLab</a>
-        </div>
+      <!-- MUSIC LINKS ONLY -->
+      <div id="music-links" style="margin-top:15px;">
+        <a href="https://open.spotify.com/artist/7GG0psjHrLABB4yQkdnrTY" target="_blank">Spotify</a> |
+        <a href="https://soundcloud.com/crunchyverse" target="_blank">SoundCloud</a> |
+        <a href="https://music.apple.com/us/artist/kari/1780686767" target="_blank">Apple Music</a> |
+        <a href="https://www.bandlab.com/crunchyverse" target="_blank">BandLab</a>
       </div>
     </section>
 
@@ -147,7 +132,6 @@
     </section>
 </main>
 
-<!-- SINGLE SCRIPT -->
 <script src="script.js"></script>
 </body>
 </html>
